--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>NFT website1</title>
 </head>
 
@@ -17,7 +17,7 @@
             <div class="header">
                 <div class="brand">
                     <a href="#">
-                        <img src="/images/logo.png" alt="" class="logo">
+                        <img src="images/logo.png" alt="" class="logo">
                         <h3>Eminent</h3>
                     </a>
                 </div>
