--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
                 <h2>Discover more NFTs</h2>
             </div>
             <div class="filter-tags">
-                <div class="tag active" onclick="openTabs(event,'cat')">Trending</div>
-                <div class="tag" onclick="openTabs(event,'art')">Art</div>
-                <div class="tag" onclick="openTabs(event,'cele')">Celebrities</div>
-                <div class="tag" onclick="openTabs(event,'game')">Gaming</div>
-                <div class="tag" onclick="openTabs(event,'sport')">Sport</div>
-                <div class="tag" onclick="openTabs(event,'music')">Music</div>
-                <div class="tag" onclick="openTabs(event,'crypto')">Crypto</div>
-                <div class="tag" onclick="openTabs(event,'filt')">
+                <div title="Click here" class="tag active" onclick="openTabs(event,'cat')">Trending</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'art')">Art</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'cele')">Celebrities</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'game')">Gaming</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'sport')">Sport</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'music')">Music</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'crypto')">Crypto</div>
+                <div title="Click here" class="tag" onclick="openTabs(event,'filt')">
                     <span class="material-icons-sharp icon">
                         filter_list
                     </span>
